# WBSFTools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BioSIM/: BioSIM_API.cpp  BioSIM_API.h  WeatherGeneration.cpp  WeatherGeneration.h  WeatherGenerator.cpp  WeatherGenerator.h  WeatherGenerator1.cpp  WeatherGeneratorApp.cpp  WeatherGeneratorMain.cpp
BioSIM_API/: BioSIM_API.cpp  BioSIM_API.h  CMakeLists.txt
BioSIM_APITest/: BioSIM_APITest.cpp  BioSIM_APITest.h  BioSIM_ModelTest.cpp  CMakeLists.txt
BioSIM_APITest/testData/DEM/: Demo 30s(SRTM30).tif
BioSIM_APITest/testData/Models/: Climatic(Annual).mdl  HemlockLooper.mdl
BioSIM_APITest/testData/Validation/: BioSIMTests.APIControllerTests.Test24_BioSimWeatherHappyPath.txt
BioSIM_APITest/testData/Weather/Daily/: Canada-USA 1980-2020.DailyDB  Canada-USA 1980-2020.DailyHdr.csv  Demo 2000-2005.DailyHdr.csv  Demo 2005-2010.DailyHdr.csv
BioSIM_APITest/testData/Weather/Daily/Canada-USA 1980-2020D/: Kapuskasing A (ON) [6073975H].csv
BioSIM_APITest/testData/Weather/Daily/Demo 2000-2005D/: Arthabaska (QC) [7020305D].csv  Auteuil (QC) [7020392D].csv  Baie St-Paul (QC) [7040446D].csv  Beauceville (QC) [7028754H].csv  Beauport (QC) [7010565H].csv  Beausejour (QC) [7020567D].csv  Bonsecours (QC) [7020828D].csv  Brassua Dam [USC00170814].csv  Bromptonville (QC) [7020860D].csv  Cap-Tourmente (QC) [7041JG6H].csv  Charlesbourg Parc Orlean (QC) [7011309D].csv  Charlevoix Mrc (QC) [7041312H].csv  Chateau Richer (QC) [7041330D].csv  Coteau Du Lac (QC) [7011947D].csv  Danville (QC) [7021954D].csv  Deschambault (QC) [7011982D].csv  Donnacona 2 (QC) [7012071D].csv  Drummondville (QC) [7022160D].csv  Fleury (QC) [7022375D].csv  Foret Montmorency (QC) [7042388D].csv  Fortierville (QC) [7022494D].csv  Granby (QC) [7022800D].csv  Granby (QC) [7022802H].csv  Grande Anse (QC) [7072816D].csv  Harris Stn [USC00173588].csv  Herouxville (QC) [7013100D].csv  Honfleur (QC) [7053140D].csv  Iberville (QC) [7023270D].csv  Ile Aux Coudres (QC) [704CBGHD].csv  Ile Aux Grues (QC) [701LBPHH].csv  Ile D Orleans (QC) [70132G9H].csv  Jackman [USC00174086].csv  Joliette Ville (QC) [7013362D].csv  Kamouraska [7053381].csv  L Assomption (QC) [7014160H].csv  L Etape (QC) [7015791H].csv  La Malbaie (QC) [7043960D].csv  La Pocatiere (QC) [7054096D].csv  La Tuque (QC) [7074240D].csv  Lac Aux Sables (QC) [701LEEHD].csv  (+97 more)
BioSIM_APITest/testData/Weather/Daily/Demo 2005-2010D/: Auteuil (QC) [7020392D].csv  Beauceville (QC) [7028754H].csv  Beausejour (QC) [7020567D].csv  Brassua Dam [USC00170814].csv  Bromptonville (QC) [7020860D].csv  Cap-Tourmente (QC) [7041JG6H].csv  Charlevoix Mrc (QC) [7041312H].csv  Chateau Richer (QC) [7041330D].csv  Drummondville (QC) [7022160D].csv  Fleury (QC) [7022375D].csv  Honfleur (QC) [7053140D].csv  Ile D Orleans (QC) [70132G9H].csv  L Assomption (QC) [7014160H].csv  La Pocatiere (QC) [7054096D].csv  Lac Megantic 2 (QC) [7023677D].csv  Lac Saint-Pierre (QC) [701LP0NH].csv  Laprairie (QC) [7024100D].csv  Laurierville (QC) [7024250D].csv  Lemieux (QC) [701Q009H].csv  Louiseville (QC) [7014332D].csv  Marieville (QC) [7024627D].csv  Mascouche (QC) [7014629D].csv  Mctavish (QC) [7024745H].csv  Milan (QC) [7024920D].csv  Mont Ste-Anne (QC) [7045326D].csv  Montreal Jar Bot (QC) [7025257D].csv  Montreal-Mirabel Int L A (QC) [7035290H].csv  Moosehead [USC00175460].csv  Notre Dame Des Bois (QC) [7025670D].csv  Pierreville (QC) [7026043D].csv  Pittston Farm [USC00176721].csv  Richmond (QC) [7026465D].csv  Riviere Des Prairies (QC) [7026612D].csv  Saint Michel (QC) [7057567D].csv  Saint-Lin-Laurentides (QC) [7017479H].csv  Saint-Louis (QC) [7027490H].csv  Sawyerville Nord (QC) [7027802D].csv  Shawinigan (QC) [7018000D].csv  Sorel (QC) [7028200D].csv  St-Alban (QC) [7016800D].csv  (+24 more)
CompressWeather/: CMakeLists.txt  CompressWeatherApp.cpp
WeatherGenerator/: CMakeLists.txt  WeatherGeneratorApp.cpp  WeatherGeneratorApp.h
lib/Debugx64/: BioSIMAPI.exp
src/BioSIM_API/: BioSIM_API.h  BioSIM_API_Example.cpp
src/CompressWeather/: CompressWeatherApp.cpp
src/WeatherGenerator/: WeatherGeneratorApp.cpp  WeatherGeneratorApp.h
test/: BioSIM_APITest.cpp  WBSToolsTest.vcxproj  main.cpp
